force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <label>GAU Allocation</label>
    <nameField>
        <displayFormat>ALL-{0}</displayFormat>
        <label>GAU Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>