force-app/main/default/objects/Allocation__c/fields/General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>General_Accounting_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The General Accounting Unit this Allocation is attributed to. Only General Accounting Units marked as active are available for new Allocations.</description>
    <inlineHelpText>The General Accounting Unit this Allocation is attributed to. Only General Accounting Units marked as active are available for new Allocations.</inlineHelpText>
    <label>General Accounting Unit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <errorMessage>Choose an active General Accounting Unit for this Allocation. You cannot modify an Allocation assigned to an inactive General Accounting Unit.</errorMessage>
        <filterItems>
            <field>General_Accounting_Unit__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Payment__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>$Source.Payment__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <infoMessage>You must select an active General Accounting Unit for this Allocation.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>GAU Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>