force-app/main/default/objects/Allocation__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <description>Percent of Opportunity amount allocated to this Allocation&apos;s General Accounting Unit. If you later modify the Opportunity amount, NPSP will update the allocation amount on the General Accounting Unit.</description>
    <inlineHelpText>Percent of Opportunity amount allocated to this Allocation&apos;s General Accounting Unit. If you later modify the Opportunity amount, NPSP will update the allocation amount on the General Accounting Unit.</inlineHelpText>
    <label>Percent</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>